--- a/Project/src/main/webapp/WEB-INF/web.xml
+++ b/Project/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-   
     <servlet>
         <servlet-name>Servlet2</servlet-name>
         <servlet-class>gr.csd.uoc.cs360.winter2020.project.Servlet.Servlet2</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ExamServlet</servlet-name>
+        <servlet-class>gr.csd.uoc.cs360.winter2020.project.Servlet.ExamServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Servlet2</servlet-name>
         <url-pattern>/Servlet2</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ExamServlet</servlet-name>
+        <url-pattern>/ExamServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
